--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,22 @@ h1{
     text-align: center;
 }
 .welcome {
-    font-weight:900;
+    font-weight:bold;
     line-height: 2;
     font-size: 2.5rem;
+    color : #876445;
 }
 .IOT{
-    font-weight: bolder;
+    font-weight: normal;
     line-height: 2;
     font-size: 2.5rem;
 }
 
 .row{
     text-align: center;
+}
+.col{
+    padding: 50px;
 }
 .button {
     padding: 15px 25px;
